syntax = "proto3";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc Login (LoginRequest) returns (LoginReply);
}

// Login message
message LoginRequest {
  string user_name = 1;
  string password_hash = 2;
}

message LoginReply {
  bool login_status = 1;
}

message HelloRequest {
  string message = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}